Source Code/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> start
Rule 2     start -> declaration start
Rule 3     start -> operations start
Rule 4     start -> expression SEMICO start
Rule 5     start -> IF condition SEMICO start
Rule 6     start -> IF conditione SEMICO start
Rule 7     start -> FOR conditionw SEMICO start
Rule 8     start -> PRINTS something SEMICO start
Rule 9     start -> empty
Rule 10    something -> ID
Rule 11    something -> STRI PLUS ID
Rule 12    something -> STRI
Rule 13    conditionw -> LPARS expressionz RPARS LSBS operations RSBS
Rule 14    expressionz -> ID IN RANGE NUMBER
Rule 15    empty -> <empty>
Rule 16    conditione -> LPARS expression RPARS LSBS start1 RSBS SEMICO ELSE LSBS start2 RSBS
Rule 17    condition -> LPARS expression RPARS LSBS start1 RSBS
Rule 18    condition -> LPARS expression RPARS LSBS IF conditionz SEMICO RSBS
Rule 19    conditionz -> LPARS expression RPARS LSBS start1 RSBS
Rule 20    start1 -> expressiona SEMICO start1
Rule 21    start1 -> empty
Rule 22    start2 -> expressionb SEMICO start2
Rule 23    start2 -> empty
Rule 24    declaration -> CREATE ds dt ID SEMICO
Rule 25    declaration -> CREATE ds ID SEMICO
Rule 26    declaration -> CREATE ds dt ID OSB NUMBER CSB SEMICO
Rule 27    operations -> ID oper SEMICO
Rule 28    operations -> ID OSB NUMBER CSB EQUAL NUMBER SEMICO
Rule 29    operations -> ID OSB NUMBER CSB EQUAL FLOAT SEMICO
Rule 30    operations -> ID OSB NUMBER CSB EQUAL STRI SEMICO
Rule 31    oper -> INSER LPARS NUMBER RPARS
Rule 32    oper -> INSER LPARS ID RPARS
Rule 33    oper -> INSER LPARS NUMBER COMMA NUMBER RPARS
Rule 34    oper -> INSER LPARS NUMBER COMMA ID RPARS
Rule 35    oper -> DELET LPARS RPARS
Rule 36    oper -> DELET LPARS NUMBER RPARS
Rule 37    oper -> ERASE LPARS RPARS
Rule 38    oper -> INSER LPARS FLOAT RPARS
Rule 39    oper -> INSER LPARS NUMBER COMMA FLOAT RPARS
Rule 40    oper -> DELET LPARS FLOAT RPARS
Rule 41    oper -> APPEND LPARS NUMBER RPARS
Rule 42    oper -> APPEND LPARS ID RPARS
Rule 43    oper -> APPEND LPARS FLOAT RPARS
Rule 44    ds -> DSQ
Rule 45    ds -> DSS
Rule 46    ds -> DSL
Rule 47    ds -> ARRAY
Rule 48    dt -> DTI
Rule 49    dt -> DTF
Rule 50    dt -> DTS
Rule 51    expression -> expression PLUS term
Rule 52    expression -> expression MINUS term
Rule 53    expression -> term
Rule 54    term -> term MULT factor
Rule 55    term -> term DIVI factor
Rule 56    term -> factor
Rule 57    factor -> ID
Rule 58    factor -> NUMBER
Rule 59    factor -> FLOAT
Rule 60    term -> ID EQUAL factor
Rule 61    term -> ID EQUAL factor PLUS factor
Rule 62    term -> factor EE factor
Rule 63    term -> factor GG factor
Rule 64    term -> factor LL factor
Rule 65    term -> factor LE factor
Rule 66    term -> factor GE factor
Rule 67    factor -> LPARS expression RPARS SEMICO
Rule 68    expressiona -> expressiona PLUS terma
Rule 69    expressiona -> expressiona MINUS terma
Rule 70    expressiona -> terma
Rule 71    terma -> terma MULT factora
Rule 72    terma -> terma DIVI factora
Rule 73    terma -> factora
Rule 74    factora -> ID
Rule 75    factora -> NUMBER
Rule 76    factora -> FLOAT
Rule 77    terma -> ID EQUAL factora
Rule 78    terma -> ID EQUAL factora PLUS factora
Rule 79    factora -> LPARS expressiona RPARS SEMICO
Rule 80    expressionb -> expressionb PLUS termb
Rule 81    expressionb -> expressionb MINUS termb
Rule 82    expressionb -> termb
Rule 83    termb -> termb MULT factorb
Rule 84    termb -> termb DIVI factorb
Rule 85    termb -> factorb
Rule 86    factorb -> ID
Rule 87    factorb -> NUMBER
Rule 88    factorb -> FLOAT
Rule 89    termb -> ID EQUAL factorb
Rule 90    termb -> ID EQUAL factorb PLUS factorb
Rule 91    factorb -> LPARS expressionb RPARS SEMICO

Terminals, with rules where they appear

APPEND               : 41 42 43
ARRAY                : 47
COMMA                : 33 34 39
CREATE               : 24 25 26
CSB                  : 26 28 29 30
DELET                : 35 36 40
DIVI                 : 55 72 84
DSL                  : 46
DSQ                  : 44
DSS                  : 45
DTF                  : 49
DTI                  : 48
DTS                  : 50
EE                   : 62
ELSE                 : 16
EQUAL                : 28 29 30 60 61 77 78 89 90
ERASE                : 37
FLOAT                : 29 38 39 40 43 59 76 88
FOR                  : 7
GE                   : 66
GG                   : 63
ID                   : 10 11 14 24 25 26 27 28 29 30 32 34 42 57 60 61 74 77 78 86 89 90
IF                   : 5 6 18
IN                   : 14
INSER                : 31 32 33 34 38 39
LE                   : 65
LL                   : 64
LPARS                : 13 16 17 18 19 31 32 33 34 35 36 37 38 39 40 41 42 43 67 79 91
LSBS                 : 13 16 16 17 18 19
MINUS                : 52 69 81
MULT                 : 54 71 83
NUMBER               : 14 26 28 28 29 30 31 33 33 34 36 39 41 58 75 87
OSB                  : 26 28 29 30
PLUS                 : 11 51 61 68 78 80 90
PRINTS               : 8
RANGE                : 14
RPARS                : 13 16 17 18 19 31 32 33 34 35 36 37 38 39 40 41 42 43 67 79 91
RSBS                 : 13 16 16 17 18 19
SEMICO               : 4 5 6 7 8 16 18 20 22 24 25 26 27 28 29 30 67 79 91
STRI                 : 11 12 30
error                : 

Nonterminals, with rules where they appear

condition            : 5
conditione           : 6
conditionw           : 7
conditionz           : 18
declaration          : 2
ds                   : 24 25 26
dt                   : 24 26
empty                : 9 21 23
expression           : 4 16 17 18 19 51 52 67
expressiona          : 20 68 69 79
expressionb          : 22 80 81 91
expressionz          : 13
factor               : 54 55 56 60 61 61 62 62 63 63 64 64 65 65 66 66
factora              : 71 72 73 77 78 78
factorb              : 83 84 85 89 90 90
oper                 : 27
operations           : 3 13
something            : 8
start                : 1 2 3 4 5 6 7 8
start1               : 16 17 19 20
start2               : 16 22
statement            : 0
term                 : 51 52 53 54 55
terma                : 68 69 70 71 72
termb                : 80 81 82 83 84

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . start
    (2) start -> . declaration start
    (3) start -> . operations start
    (4) start -> . expression SEMICO start
    (5) start -> . IF condition SEMICO start
    (6) start -> . IF conditione SEMICO start
    (7) start -> . FOR conditionw SEMICO start
    (8) start -> . PRINTS something SEMICO start
    (9) start -> . empty
    (24) declaration -> . CREATE ds dt ID SEMICO
    (25) declaration -> . CREATE ds ID SEMICO
    (26) declaration -> . CREATE ds dt ID OSB NUMBER CSB SEMICO
    (27) operations -> . ID oper SEMICO
    (28) operations -> . ID OSB NUMBER CSB EQUAL NUMBER SEMICO
    (29) operations -> . ID OSB NUMBER CSB EQUAL FLOAT SEMICO
    (30) operations -> . ID OSB NUMBER CSB EQUAL STRI SEMICO
    (51) expression -> . expression PLUS term
    (52) expression -> . expression MINUS term
    (53) expression -> . term
    (15) empty -> .
    (54) term -> . term MULT factor
    (55) term -> . term DIVI factor
    (56) term -> . factor
    (60) term -> . ID EQUAL factor
    (61) term -> . ID EQUAL factor PLUS factor
    (62) term -> . factor EE factor
    (63) term -> . factor GG factor
    (64) term -> . factor LL factor
    (65) term -> . factor LE factor
    (66) term -> . factor GE factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    IF              shift and go to state 12
    FOR             shift and go to state 10
    PRINTS          shift and go to state 9
    CREATE          shift and go to state 16
    ID              shift and go to state 4
    $end            reduce using rule 15 (empty -> .)
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    operations                     shift and go to state 1
    term                           shift and go to state 13
    factor                         shift and go to state 7
    start                          shift and go to state 5
    empty                          shift and go to state 8
    statement                      shift and go to state 6
    declaration                    shift and go to state 11
    expression                     shift and go to state 15

state 1

    (3) start -> operations . start
    (2) start -> . declaration start
    (3) start -> . operations start
    (4) start -> . expression SEMICO start
    (5) start -> . IF condition SEMICO start
    (6) start -> . IF conditione SEMICO start
    (7) start -> . FOR conditionw SEMICO start
    (8) start -> . PRINTS something SEMICO start
    (9) start -> . empty
    (24) declaration -> . CREATE ds dt ID SEMICO
    (25) declaration -> . CREATE ds ID SEMICO
    (26) declaration -> . CREATE ds dt ID OSB NUMBER CSB SEMICO
    (27) operations -> . ID oper SEMICO
    (28) operations -> . ID OSB NUMBER CSB EQUAL NUMBER SEMICO
    (29) operations -> . ID OSB NUMBER CSB EQUAL FLOAT SEMICO
    (30) operations -> . ID OSB NUMBER CSB EQUAL STRI SEMICO
    (51) expression -> . expression PLUS term
    (52) expression -> . expression MINUS term
    (53) expression -> . term
    (15) empty -> .
    (54) term -> . term MULT factor
    (55) term -> . term DIVI factor
    (56) term -> . factor
    (60) term -> . ID EQUAL factor
    (61) term -> . ID EQUAL factor PLUS factor
    (62) term -> . factor EE factor
    (63) term -> . factor GG factor
    (64) term -> . factor LL factor
    (65) term -> . factor LE factor
    (66) term -> . factor GE factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    IF              shift and go to state 12
    FOR             shift and go to state 10
    PRINTS          shift and go to state 9
    CREATE          shift and go to state 16
    ID              shift and go to state 4
    $end            reduce using rule 15 (empty -> .)
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    operations                     shift and go to state 1
    term                           shift and go to state 13
    factor                         shift and go to state 7
    start                          shift and go to state 17
    empty                          shift and go to state 8
    declaration                    shift and go to state 11
    expression                     shift and go to state 15

state 2

    (58) factor -> NUMBER .

    EE              reduce using rule 58 (factor -> NUMBER .)
    GG              reduce using rule 58 (factor -> NUMBER .)
    LL              reduce using rule 58 (factor -> NUMBER .)
    LE              reduce using rule 58 (factor -> NUMBER .)
    GE              reduce using rule 58 (factor -> NUMBER .)
    MULT            reduce using rule 58 (factor -> NUMBER .)
    DIVI            reduce using rule 58 (factor -> NUMBER .)
    RPARS           reduce using rule 58 (factor -> NUMBER .)
    PLUS            reduce using rule 58 (factor -> NUMBER .)
    MINUS           reduce using rule 58 (factor -> NUMBER .)
    SEMICO          reduce using rule 58 (factor -> NUMBER .)


state 3

    (67) factor -> LPARS . expression RPARS SEMICO
    (51) expression -> . expression PLUS term
    (52) expression -> . expression MINUS term
    (53) expression -> . term
    (54) term -> . term MULT factor
    (55) term -> . term DIVI factor
    (56) term -> . factor
    (60) term -> . ID EQUAL factor
    (61) term -> . ID EQUAL factor PLUS factor
    (62) term -> . factor EE factor
    (63) term -> . factor GG factor
    (64) term -> . factor LL factor
    (65) term -> . factor LE factor
    (66) term -> . factor GE factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 18
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    term                           shift and go to state 13
    expression                     shift and go to state 19
    factor                         shift and go to state 7

state 4

    (27) operations -> ID . oper SEMICO
    (28) operations -> ID . OSB NUMBER CSB EQUAL NUMBER SEMICO
    (29) operations -> ID . OSB NUMBER CSB EQUAL FLOAT SEMICO
    (30) operations -> ID . OSB NUMBER CSB EQUAL STRI SEMICO
    (60) term -> ID . EQUAL factor
    (61) term -> ID . EQUAL factor PLUS factor
    (57) factor -> ID .
    (31) oper -> . INSER LPARS NUMBER RPARS
    (32) oper -> . INSER LPARS ID RPARS
    (33) oper -> . INSER LPARS NUMBER COMMA NUMBER RPARS
    (34) oper -> . INSER LPARS NUMBER COMMA ID RPARS
    (35) oper -> . DELET LPARS RPARS
    (36) oper -> . DELET LPARS NUMBER RPARS
    (37) oper -> . ERASE LPARS RPARS
    (38) oper -> . INSER LPARS FLOAT RPARS
    (39) oper -> . INSER LPARS NUMBER COMMA FLOAT RPARS
    (40) oper -> . DELET LPARS FLOAT RPARS
    (41) oper -> . APPEND LPARS NUMBER RPARS
    (42) oper -> . APPEND LPARS ID RPARS
    (43) oper -> . APPEND LPARS FLOAT RPARS

    OSB             shift and go to state 26
    EQUAL           shift and go to state 21
    EE              reduce using rule 57 (factor -> ID .)
    GG              reduce using rule 57 (factor -> ID .)
    LL              reduce using rule 57 (factor -> ID .)
    LE              reduce using rule 57 (factor -> ID .)
    GE              reduce using rule 57 (factor -> ID .)
    MULT            reduce using rule 57 (factor -> ID .)
    DIVI            reduce using rule 57 (factor -> ID .)
    SEMICO          reduce using rule 57 (factor -> ID .)
    PLUS            reduce using rule 57 (factor -> ID .)
    MINUS           reduce using rule 57 (factor -> ID .)
    INSER           shift and go to state 25
    DELET           shift and go to state 22
    ERASE           shift and go to state 23
    APPEND          shift and go to state 24

    oper                           shift and go to state 20

state 5

    (1) statement -> start .

    $end            reduce using rule 1 (statement -> start .)


state 6

    (0) S' -> statement .



state 7

    (56) term -> factor .
    (62) term -> factor . EE factor
    (63) term -> factor . GG factor
    (64) term -> factor . LL factor
    (65) term -> factor . LE factor
    (66) term -> factor . GE factor

    MULT            reduce using rule 56 (term -> factor .)
    DIVI            reduce using rule 56 (term -> factor .)
    SEMICO          reduce using rule 56 (term -> factor .)
    PLUS            reduce using rule 56 (term -> factor .)
    MINUS           reduce using rule 56 (term -> factor .)
    RPARS           reduce using rule 56 (term -> factor .)
    EE              shift and go to state 28
    GG              shift and go to state 30
    LL              shift and go to state 29
    LE              shift and go to state 27
    GE              shift and go to state 31


state 8

    (9) start -> empty .

    $end            reduce using rule 9 (start -> empty .)


state 9

    (8) start -> PRINTS . something SEMICO start
    (10) something -> . ID
    (11) something -> . STRI PLUS ID
    (12) something -> . STRI

    ID              shift and go to state 34
    STRI            shift and go to state 32

    something                      shift and go to state 33

state 10

    (7) start -> FOR . conditionw SEMICO start
    (13) conditionw -> . LPARS expressionz RPARS LSBS operations RSBS

    LPARS           shift and go to state 36

    conditionw                     shift and go to state 35

state 11

    (2) start -> declaration . start
    (2) start -> . declaration start
    (3) start -> . operations start
    (4) start -> . expression SEMICO start
    (5) start -> . IF condition SEMICO start
    (6) start -> . IF conditione SEMICO start
    (7) start -> . FOR conditionw SEMICO start
    (8) start -> . PRINTS something SEMICO start
    (9) start -> . empty
    (24) declaration -> . CREATE ds dt ID SEMICO
    (25) declaration -> . CREATE ds ID SEMICO
    (26) declaration -> . CREATE ds dt ID OSB NUMBER CSB SEMICO
    (27) operations -> . ID oper SEMICO
    (28) operations -> . ID OSB NUMBER CSB EQUAL NUMBER SEMICO
    (29) operations -> . ID OSB NUMBER CSB EQUAL FLOAT SEMICO
    (30) operations -> . ID OSB NUMBER CSB EQUAL STRI SEMICO
    (51) expression -> . expression PLUS term
    (52) expression -> . expression MINUS term
    (53) expression -> . term
    (15) empty -> .
    (54) term -> . term MULT factor
    (55) term -> . term DIVI factor
    (56) term -> . factor
    (60) term -> . ID EQUAL factor
    (61) term -> . ID EQUAL factor PLUS factor
    (62) term -> . factor EE factor
    (63) term -> . factor GG factor
    (64) term -> . factor LL factor
    (65) term -> . factor LE factor
    (66) term -> . factor GE factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    IF              shift and go to state 12
    FOR             shift and go to state 10
    PRINTS          shift and go to state 9
    CREATE          shift and go to state 16
    ID              shift and go to state 4
    $end            reduce using rule 15 (empty -> .)
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    operations                     shift and go to state 1
    term                           shift and go to state 13
    factor                         shift and go to state 7
    start                          shift and go to state 37
    empty                          shift and go to state 8
    declaration                    shift and go to state 11
    expression                     shift and go to state 15

state 12

    (5) start -> IF . condition SEMICO start
    (6) start -> IF . conditione SEMICO start
    (17) condition -> . LPARS expression RPARS LSBS start1 RSBS
    (18) condition -> . LPARS expression RPARS LSBS IF conditionz SEMICO RSBS
    (16) conditione -> . LPARS expression RPARS LSBS start1 RSBS SEMICO ELSE LSBS start2 RSBS

    LPARS           shift and go to state 39

    conditione                     shift and go to state 38
    condition                      shift and go to state 40

state 13

    (53) expression -> term .
    (54) term -> term . MULT factor
    (55) term -> term . DIVI factor

    SEMICO          reduce using rule 53 (expression -> term .)
    PLUS            reduce using rule 53 (expression -> term .)
    MINUS           reduce using rule 53 (expression -> term .)
    RPARS           reduce using rule 53 (expression -> term .)
    MULT            shift and go to state 42
    DIVI            shift and go to state 41


state 14

    (59) factor -> FLOAT .

    EE              reduce using rule 59 (factor -> FLOAT .)
    GG              reduce using rule 59 (factor -> FLOAT .)
    LL              reduce using rule 59 (factor -> FLOAT .)
    LE              reduce using rule 59 (factor -> FLOAT .)
    GE              reduce using rule 59 (factor -> FLOAT .)
    MULT            reduce using rule 59 (factor -> FLOAT .)
    DIVI            reduce using rule 59 (factor -> FLOAT .)
    RPARS           reduce using rule 59 (factor -> FLOAT .)
    PLUS            reduce using rule 59 (factor -> FLOAT .)
    MINUS           reduce using rule 59 (factor -> FLOAT .)
    SEMICO          reduce using rule 59 (factor -> FLOAT .)


state 15

    (4) start -> expression . SEMICO start
    (51) expression -> expression . PLUS term
    (52) expression -> expression . MINUS term

    SEMICO          shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45


state 16

    (24) declaration -> CREATE . ds dt ID SEMICO
    (25) declaration -> CREATE . ds ID SEMICO
    (26) declaration -> CREATE . ds dt ID OSB NUMBER CSB SEMICO
    (44) ds -> . DSQ
    (45) ds -> . DSS
    (46) ds -> . DSL
    (47) ds -> . ARRAY

    DSQ             shift and go to state 48
    DSS             shift and go to state 49
    DSL             shift and go to state 46
    ARRAY           shift and go to state 47

    ds                             shift and go to state 50

state 17

    (3) start -> operations start .

    $end            reduce using rule 3 (start -> operations start .)


state 18

    (60) term -> ID . EQUAL factor
    (61) term -> ID . EQUAL factor PLUS factor
    (57) factor -> ID .

    EQUAL           shift and go to state 21
    EE              reduce using rule 57 (factor -> ID .)
    GG              reduce using rule 57 (factor -> ID .)
    LL              reduce using rule 57 (factor -> ID .)
    LE              reduce using rule 57 (factor -> ID .)
    GE              reduce using rule 57 (factor -> ID .)
    MULT            reduce using rule 57 (factor -> ID .)
    DIVI            reduce using rule 57 (factor -> ID .)
    RPARS           reduce using rule 57 (factor -> ID .)
    PLUS            reduce using rule 57 (factor -> ID .)
    MINUS           reduce using rule 57 (factor -> ID .)
    SEMICO          reduce using rule 57 (factor -> ID .)


state 19

    (67) factor -> LPARS expression . RPARS SEMICO
    (51) expression -> expression . PLUS term
    (52) expression -> expression . MINUS term

    RPARS           shift and go to state 51
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45


state 20

    (27) operations -> ID oper . SEMICO

    SEMICO          shift and go to state 52


state 21

    (60) term -> ID EQUAL . factor
    (61) term -> ID EQUAL . factor PLUS factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 54
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    factor                         shift and go to state 53

state 22

    (35) oper -> DELET . LPARS RPARS
    (36) oper -> DELET . LPARS NUMBER RPARS
    (40) oper -> DELET . LPARS FLOAT RPARS

    LPARS           shift and go to state 55


state 23

    (37) oper -> ERASE . LPARS RPARS

    LPARS           shift and go to state 56


state 24

    (41) oper -> APPEND . LPARS NUMBER RPARS
    (42) oper -> APPEND . LPARS ID RPARS
    (43) oper -> APPEND . LPARS FLOAT RPARS

    LPARS           shift and go to state 57


state 25

    (31) oper -> INSER . LPARS NUMBER RPARS
    (32) oper -> INSER . LPARS ID RPARS
    (33) oper -> INSER . LPARS NUMBER COMMA NUMBER RPARS
    (34) oper -> INSER . LPARS NUMBER COMMA ID RPARS
    (38) oper -> INSER . LPARS FLOAT RPARS
    (39) oper -> INSER . LPARS NUMBER COMMA FLOAT RPARS

    LPARS           shift and go to state 58


state 26

    (28) operations -> ID OSB . NUMBER CSB EQUAL NUMBER SEMICO
    (29) operations -> ID OSB . NUMBER CSB EQUAL FLOAT SEMICO
    (30) operations -> ID OSB . NUMBER CSB EQUAL STRI SEMICO

    NUMBER          shift and go to state 59


state 27

    (65) term -> factor LE . factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 54
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    factor                         shift and go to state 60

state 28

    (62) term -> factor EE . factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 54
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    factor                         shift and go to state 61

state 29

    (64) term -> factor LL . factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 54
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    factor                         shift and go to state 62

state 30

    (63) term -> factor GG . factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 54
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    factor                         shift and go to state 63

state 31

    (66) term -> factor GE . factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 54
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    factor                         shift and go to state 64

state 32

    (11) something -> STRI . PLUS ID
    (12) something -> STRI .

    PLUS            shift and go to state 65
    SEMICO          reduce using rule 12 (something -> STRI .)


state 33

    (8) start -> PRINTS something . SEMICO start

    SEMICO          shift and go to state 66


state 34

    (10) something -> ID .

    SEMICO          reduce using rule 10 (something -> ID .)


state 35

    (7) start -> FOR conditionw . SEMICO start

    SEMICO          shift and go to state 67


state 36

    (13) conditionw -> LPARS . expressionz RPARS LSBS operations RSBS
    (14) expressionz -> . ID IN RANGE NUMBER

    ID              shift and go to state 69

    expressionz                    shift and go to state 68

state 37

    (2) start -> declaration start .

    $end            reduce using rule 2 (start -> declaration start .)


state 38

    (6) start -> IF conditione . SEMICO start

    SEMICO          shift and go to state 70


state 39

    (17) condition -> LPARS . expression RPARS LSBS start1 RSBS
    (18) condition -> LPARS . expression RPARS LSBS IF conditionz SEMICO RSBS
    (16) conditione -> LPARS . expression RPARS LSBS start1 RSBS SEMICO ELSE LSBS start2 RSBS
    (51) expression -> . expression PLUS term
    (52) expression -> . expression MINUS term
    (53) expression -> . term
    (54) term -> . term MULT factor
    (55) term -> . term DIVI factor
    (56) term -> . factor
    (60) term -> . ID EQUAL factor
    (61) term -> . ID EQUAL factor PLUS factor
    (62) term -> . factor EE factor
    (63) term -> . factor GG factor
    (64) term -> . factor LL factor
    (65) term -> . factor LE factor
    (66) term -> . factor GE factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 18
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    term                           shift and go to state 13
    factor                         shift and go to state 7
    expression                     shift and go to state 71

state 40

    (5) start -> IF condition . SEMICO start

    SEMICO          shift and go to state 72


state 41

    (55) term -> term DIVI . factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 54
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    factor                         shift and go to state 73

state 42

    (54) term -> term MULT . factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 54
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    factor                         shift and go to state 74

state 43

    (4) start -> expression SEMICO . start
    (2) start -> . declaration start
    (3) start -> . operations start
    (4) start -> . expression SEMICO start
    (5) start -> . IF condition SEMICO start
    (6) start -> . IF conditione SEMICO start
    (7) start -> . FOR conditionw SEMICO start
    (8) start -> . PRINTS something SEMICO start
    (9) start -> . empty
    (24) declaration -> . CREATE ds dt ID SEMICO
    (25) declaration -> . CREATE ds ID SEMICO
    (26) declaration -> . CREATE ds dt ID OSB NUMBER CSB SEMICO
    (27) operations -> . ID oper SEMICO
    (28) operations -> . ID OSB NUMBER CSB EQUAL NUMBER SEMICO
    (29) operations -> . ID OSB NUMBER CSB EQUAL FLOAT SEMICO
    (30) operations -> . ID OSB NUMBER CSB EQUAL STRI SEMICO
    (51) expression -> . expression PLUS term
    (52) expression -> . expression MINUS term
    (53) expression -> . term
    (15) empty -> .
    (54) term -> . term MULT factor
    (55) term -> . term DIVI factor
    (56) term -> . factor
    (60) term -> . ID EQUAL factor
    (61) term -> . ID EQUAL factor PLUS factor
    (62) term -> . factor EE factor
    (63) term -> . factor GG factor
    (64) term -> . factor LL factor
    (65) term -> . factor LE factor
    (66) term -> . factor GE factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    IF              shift and go to state 12
    FOR             shift and go to state 10
    PRINTS          shift and go to state 9
    CREATE          shift and go to state 16
    ID              shift and go to state 4
    $end            reduce using rule 15 (empty -> .)
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    operations                     shift and go to state 1
    term                           shift and go to state 13
    factor                         shift and go to state 7
    start                          shift and go to state 75
    empty                          shift and go to state 8
    declaration                    shift and go to state 11
    expression                     shift and go to state 15

state 44

    (51) expression -> expression PLUS . term
    (54) term -> . term MULT factor
    (55) term -> . term DIVI factor
    (56) term -> . factor
    (60) term -> . ID EQUAL factor
    (61) term -> . ID EQUAL factor PLUS factor
    (62) term -> . factor EE factor
    (63) term -> . factor GG factor
    (64) term -> . factor LL factor
    (65) term -> . factor LE factor
    (66) term -> . factor GE factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 18
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    term                           shift and go to state 76
    factor                         shift and go to state 7

state 45

    (52) expression -> expression MINUS . term
    (54) term -> . term MULT factor
    (55) term -> . term DIVI factor
    (56) term -> . factor
    (60) term -> . ID EQUAL factor
    (61) term -> . ID EQUAL factor PLUS factor
    (62) term -> . factor EE factor
    (63) term -> . factor GG factor
    (64) term -> . factor LL factor
    (65) term -> . factor LE factor
    (66) term -> . factor GE factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . FLOAT
    (67) factor -> . LPARS expression RPARS SEMICO

    ID              shift and go to state 18
    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 14
    LPARS           shift and go to state 3

    term                           shift and go to state 77
    factor                         shift and go to state 7

state 46

    (46) ds -> DSL .

    ID              reduce using rule 46 (ds -> DSL .)
    DTI             reduce using rule 46 (ds -> DSL .)
    DTF             reduce using rule 46 (ds -> DSL .)
    DTS             reduce using rule 46 (ds -> DSL .)


state 47

    (47) ds -> ARRAY .

    ID              reduce using rule 47 (ds -> ARRAY .)
    DTI             reduce using rule 47 (ds -> ARRAY .)
    DTF             reduce using rule 47 (ds -> ARRAY .)
    DTS             reduce using rule 47 (ds -> ARRAY .)


state 48

    (44) ds -> DSQ .

    ID              reduce using rule 44 (ds -> DSQ .)
    DTI             reduce using rule 44 (ds -> DSQ .)
    DTF             reduce using rule 44 (ds -> DSQ .)
    DTS             reduce using rule 44 (ds -> DSQ .)


state 49

    (45) ds -> DSS .

    ID              reduce using rule 45 (ds -> DSS .)
    DTI             reduce using rule 45 (ds -> DSS .)
    DTF             reduce using rule 45 (ds -> DSS .)
    DTS             reduce using rule 45 (ds -> DSS .)


state 50

    (24) declaration -> CREATE ds . dt ID SEMICO
    (25) declaration -> CREATE ds . ID SEMICO
    (26) declaration -> CREATE ds . dt ID OSB NUMBER CSB SEMICO
    (48) dt -> . DTI
    (49) dt -> . DTF
    (50) dt -> . DTS

    ID              shift and go to state 79
    DTI             shift and go to state 78
    DTF             shift and go to state 80
    DTS             shift and go to state 81

    dt                             shift and go to state 82

state 51

    (67) factor -> LPARS expression RPARS . SEMICO

    SEMICO          shift and go to state 83


state 52

    (27) operations -> ID oper SEMICO .
